# DevCleaner

./: LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icon.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  cleaner.rs  commands.rs  conversation.rs  ide_detector.rs  lib.rs  scanner.rs  uninstaller.rs
src/components/: BackupsPage.tsx  CleanPage.tsx  ConversationsPage.tsx  Dashboard.tsx  IdeIcon.tsx  ScanCleanPage.tsx  SettingsPage.tsx  Sidebar.tsx  TitleBar.tsx  UninstallPage.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  separator.tsx
src/hooks/: useIdeIcons.ts
src/i18n/: en.ts  index.ts  zh.ts
src/types/: index.ts
src/utils/: formatters.ts  storage.ts  theme.ts
