[package]
name = "ide-cleaner"
version = "0.1.0"
description = "IDE Cache Cleaner for VSCode/Cursor/Windsurf/Kiro/Trae"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
dirs = "6"
window-vibrancy = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
winreg = "0.55"
base64 = "0.22"
